[metadata]
name = elm-messenger
version = 0.4.0
description = The Messenger toolkit for Elm
long_description = file: Readme.md
long_description_content_type = text/markdown
author = linsyking
author_email = linsy_king@sjtu.edu.cn
keywords = cli
license = MIT License

[options]
python_requires = >=3.7
packages = messengercli
install_requires = 
    typer
